--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   sqflite:
   path_provider:
+  intl:
 
 
   # The following adds the Cupertino Icons font to your application.
